vlib/v/checker/tests/interface_implementing_own_interface_method.vv
interface Animal {
    speak()
}

fn (a Animal) speak() {
    println('speaking')
}